<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_update">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9DA286"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/version_update_status"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_update"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_margin="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/iv_card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="10dp"
                    android:elevation="10dp">
                    <ImageView
                        android:layout_margin="5dp"
                        android:id="@+id/iv_app"
                        android:layout_width="80dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/kommmainicon"
                        android:layout_height="80dp"
                        android:contentDescription="TODO" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_toEndOf="@id/iv_card"
                    android:layout_margin="4dp"/>

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean_course_app_for_myanmar"
                    android:layout_below="@id/tv1"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:layout_toEndOf="@id/iv_card"
                    android:layout_margin="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Current version is 1.15"
                    android:layout_below="@id/tv2"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:layout_toEndOf="@id/iv_card"
                    android:layout_margin="4dp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/medifire_get"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/get_playStore"
                    android:layout_margin="5dp"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_google_play_store"
                    android:text="@string/playstore_get"
                    android:background="@drawable/bt_update"/>

                <Button
                    android:id="@+id/get_cupid"
                    android:layout_margin="5dp"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_mediafire"
                    android:text="@string/get_it_on_mediafire"
                    android:background="@drawable/bt_update"/>
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/web_adview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-2472405866346270/2510952382"
                android:visibility="gone"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9DA286"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/get_other_products_on_playstore"
                android:layout_marginTop="50dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:padding="7dp"
                android:id="@+id/recyclerProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_loading_black"
        android:padding="5dp"
        android:visibility="gone"
        android:theme="@style/loading"/>

</RelativeLayout>