<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="#00FFFFFF"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:gravity="center"
            android:textColor="#FF5157"
            android:fontFamily="@font/poppins_medium"
            android:textSize="30sp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/tv_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textColor="#44CB6D"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Point : 6"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/tv_highest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#4B93FF"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="Highest Score : 175"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_game_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_score">

            <ImageView
                android:id="@+id/iv_displayImage"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_game_answer_button"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="4dp"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_game_answer_button"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="4dp"
                android:text="B"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonC"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <Button
                android:id="@+id/buttonA"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_game_answer_button"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="4dp"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonB"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <TextView
                android:id="@+id/tv_ansB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#403F3F"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonA"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <TextView
                android:id="@+id/tv_ansA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#403F3F"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_ansB"
                app:layout_constraintEnd_toEndOf="@+id/tv_ansB"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <TextView
                android:id="@+id/tv_ansC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#403F3F"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_ansB"
                app:layout_constraintStart_toStartOf="@+id/tv_ansB"
                app:layout_constraintTop_toBottomOf="@+id/tv_ansB" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="210dp" />

            <TextView
                android:id="@+id/tv_displayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#403F3F"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_displayAudio"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_speak" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="7dp"
            android:text="Answer is B"
            android:textColor="#403F3F"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="15dp">

            <Button
                android:id="@+id/bt_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_red"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginEnd="10dp"
                android:text="@string/quit"/>

            <Button
                android:id="@+id/bt_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:background="@drawable/bg_green"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>